--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;net8</TargetFrameworks>
+        <TargetFrameworks>net5.0;net6;net8</TargetFrameworks>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <Nullable>enable</Nullable>
-        <PackageVersion>1.6.34</PackageVersion>
+        <PackageVersion>1.6.35</PackageVersion>
         <PackageTags>outbox business-transaction consistency</PackageTags>
         <LangVersion>default</LangVersion>
     </PropertyGroup>
