--- a/src/Dex.Audit/Infrastructure/Dex.Audit.MediatR/Dex.Audit.MediatR.csproj
+++ b/src/Dex.Audit/Infrastructure/Dex.Audit.MediatR/Dex.Audit.MediatR.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <PackageTags>audit mediatr</PackageTags>
         <InformationalVersion>8.0</InformationalVersion>
-        <PackageVersion>8.0.0</PackageVersion>
+        <PackageVersion>8.0.1</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -30,7 +30,7 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-      <PackageReference Include="MediatR" />
+      <PackageReference Include="MediatR" Version="12.5.0" />
     </ItemGroup>
 
     <ItemGroup>
