--- a/src/Dex.Audit/Server/Dex.Audit.Server/Dex.Audit.Server.csproj
+++ b/src/Dex.Audit/Server/Dex.Audit.Server/Dex.Audit.Server.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <PackageTags>audit server</PackageTags>
         <InformationalVersion>8.0</InformationalVersion>
-        <PackageVersion>8.0.1</PackageVersion>
+        <PackageVersion>8.0.2</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -31,10 +31,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
         <PackageReference Include="Microsoft.Extensions.Options"/>
-        <PackageReference Include="Dex.MassTransit.Rabbit" />
+        <PackageReference Include="Dex.MassTransit.Rabbit" Version="8.0.2" />
     </ItemGroup>
 
     <ItemGroup>
