--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <InformationalVersion>6.0</InformationalVersion>
-    <PackageVersion>6.0.1</PackageVersion>
+    <PackageVersion>6.0.2</PackageVersion>
     <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
     <FileVersion>$(PackageVersion)</FileVersion>
   </PropertyGroup>
@@ -36,6 +36,10 @@
     <Compile Update="StrategyOnceExecutor.cs">
       <DependentUpon>IStrategyOnceExecutor.cs</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dex.Cap.Common\Dex.Cap.Common.csproj" />
   </ItemGroup>
 
 </Project>
