remove IOutboxMessage, changing the receiving messageType and handler (#173)
* remove IOutboxMessage, changing the receiving messageType and handler

* remove IDistributedEventParams, fix tests

* async/await rework

* move and rename ITransactionOptions, add TransactionalConsumer, TransactionalOutboxHandler

* async/await rework Dex.Events

(cherry picked from commit d369b10e4c1b03ca424eaf56d774684a00bbe7b5)

--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <InformationalVersion>8.0</InformationalVersion>
-        <PackageVersion>8.0.1</PackageVersion>
+        <PackageVersion>8.0.2</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -35,6 +35,10 @@
         <Compile Update="StrategyOnceExecutor.cs">
             <DependentUpon>IStrategyOnceExecutor.cs</DependentUpon>
         </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Dex.Cap.Common\Dex.Cap.Common.csproj" />
     </ItemGroup>
 
 </Project>
