set clearChangeTrackerOnRetry by default to true. Move ChangeTracker.Clear from finally to transient catch. Remove ChangeTracker.Clear from outbox ExecuteOperationAsync. Fix tests

--- a/src/Dex.Cap/Dex.Cap.Common.Ef/Dex.Cap.Common.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Common.Ef/Dex.Cap.Common.Ef.csproj
@@ -31,6 +31,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" />
+        <PackageReference Include="Npgsql" />
     </ItemGroup>
 
     <ItemGroup>
