add clear change tracker on retry, remove ExecuteOperationAsync in OutboxService (#189)
* add ClearChangeTrackerOnRetry, add TransactionOptions to outbox

* set clearChangeTrackerOnRetry by default to true. Move ChangeTracker.Clear from finally to transient catch. Remove ChangeTracker.Clear from outbox ExecuteOperationAsync. Fix tests

* add IEfTransactionOptions in DbContextExecuteInTransactionExtensions

* remove EmptyOutboxMessage, remove ExecuteOperationAsync in OutboxService, fix tests

* inc nuget version

* EfTransactionOptions memory optimization

* minor signature refactor

* fix Dex.Events

* review

* major version update

* revert major version update from several service, inc major to Dex.Events

---------

Co-authored-by: Виталий Чабан <v.chaban@dextechnology.com>

--- a/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
@@ -4,10 +4,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <PackageTags>outbox business-transaction consistency NEO4J implementation</PackageTags>
         <InformationalVersion>8.0</InformationalVersion>
-        <PackageVersion>8.0.3</PackageVersion>
+        <PackageVersion>8.1.0</PackageVersion>
         <VersionSuffix>alpha</VersionSuffix>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -29,6 +30,7 @@
     <!--Для NuGet-->
 
     <ItemGroup>
+        <ProjectReference Include="..\Dex.Cap.Common\Dex.Cap.Common.csproj" />
         <ProjectReference Include="..\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj"/>
     </ItemGroup>
 
