--- a/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
+++ b/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <PackageTags>dex; bank card type resolver, luna check</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
