--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <LangVersion>Latest</LangVersion>
         <Nullable>enable</Nullable>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <InformationalVersion>1.0</InformationalVersion>
         <PackageVersion>1.0.31</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
