--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,66 +1,69 @@
 <Project>
 
-  <PropertyGroup>
-    <FrameworkVersion>8.0.15</FrameworkVersion>
-    <EntityFrameworkVersion>8.0.15</EntityFrameworkVersion>
-    <ExtensionsVersion>[8.0.0,9.0.0)</ExtensionsVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <FrameworkVersion>8.0.20</FrameworkVersion>
+        <EntityFrameworkVersion>8.0.20</EntityFrameworkVersion>
+        <ExtensionsVersion>[8.0.0,9.0.0)</ExtensionsVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <!--build related-->
-    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0" PrivateAssets="All" />
+    <ItemGroup>
+        <!--build related-->
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
+        <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0" PrivateAssets="All"/>
 
-    <!--tests -->
-    <PackageReference Update="coverlet.collector" Version="6.0.4" />
-    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-    <PackageReference Update="xunit" Version="2.9.3" />
-    <PackageReference Update="NUnit" Version="4.3.2" />
-    <PackageReference Update="NUnit3TestAdapter" Version="5.0.0" />
-    <PackageReference Update="NUnit.Analyzers" Version="4.7.0" />
+        <!--tests -->
+        <PackageReference Update="coverlet.collector" Version="6.0.4"/>
+        <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
+        <PackageReference Update="xunit" Version="2.9.3"/>
+        <PackageReference Update="NUnit" Version="4.4.0"/>
+        <PackageReference Update="NUnit3TestAdapter" Version="5.1.0"/>
+        <PackageReference Update="NUnit.Analyzers" Version="4.10.0"/>
 
-    <!--microsoft extensions -->
-    <PackageReference Update="Microsoft.Extensions.*" Version="$(ExtensionsVersion)" />
-    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1" />
+        <!--microsoft extensions -->
+        <PackageReference Update="Microsoft.Extensions.*" Version="$(ExtensionsVersion)"/>
+        <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1"/>
+        <PackageReference Update="System.ComponentModel.Annotations" Version="5.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.15"/>
+        <PackageReference Update="Microsoft.Extensions.Logging" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3"/>
+        <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2"/>
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.15"/>
+        <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1"/>
 
-    <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.15" />
-    <PackageReference Update="Microsoft.Extensions.Logging" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
-    <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.15" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
+        <PackageReference Update="System.Threading.Channels" Version="8.0.0"/>
 
-    <PackageReference Update="System.Threading.Channels" Version="8.0.0" />
+        <!--misc -->
+        <PackageReference Update="Npgsql" Version="8.0.7"/>
+        <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
+        <PackageReference Update="Neo4jClient" Version="5.1.20"/>
+        <PackageReference Update="MassTransit*" Version="8.4.1"/>
+        <PackageReference Update="MassTransit.TestFramework" Version="8.4.1"/>
+        <PackageReference Update="RndUsr0.DinkToPdf" Version="1.0.9-20190207.1"/>
+        <PackageReference Update="RazorLight" Version="2.3.1"/>
 
-    <!--misc -->
-    <PackageReference Update="Npgsql" Version="8.0.7" />
-    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
-    <PackageReference Update="Neo4jClient" Version="5.1.16" />
-    <PackageReference Update="MassTransit*" Version="8.4.1" />
-    <PackageReference Update="MassTransit.TestFramework" Version="8.4.1" />
+        <!--microsoft asp.net core -->
+        <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.3.0"/>
 
-    <!--microsoft asp.net core -->
-    <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
+        <!--microsoft entity framework -->
+        <PackageReference Update="Microsoft.EntityFrameworkCore" Version="$(EntityFrameworkVersion)"/>
+        <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="$(EntityFrameworkVersion)"/>
+        <PackageReference Update="Microsoft.EntityFrameworkCore.Sqlite" Version="$(EntityFrameworkVersion)"/>
+        <PackageReference Update="Microsoft.EntityFrameworkCore.InMemory" Version="$(EntityFrameworkVersion)"/>
+        <PackageReference Update="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EntityFrameworkVersion)"/>
+        <PackageReference Update="Microsoft.EntityFrameworkCore.Design" Version="$(EntityFrameworkVersion)" PrivateAssets="All"/>
 
-    <!--microsoft entity framework -->
-    <PackageReference Update="Microsoft.EntityFrameworkCore" Version="$(EntityFrameworkVersion)" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="$(EntityFrameworkVersion)" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Sqlite" Version="$(EntityFrameworkVersion)" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.InMemory" Version="$(EntityFrameworkVersion)" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EntityFrameworkVersion)" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Design" Version="$(EntityFrameworkVersion)" PrivateAssets="All" />
+        <!--dex libs -->
+        <PackageReference Update="Dex.Types" Version="1.0.26"/>
+        <PackageReference Update="Dex.Extensions" Version="1.0.30"/>
+        <PackageReference Update="Dex.Neo4J" Version="1.1.31"/>
 
-    <!--dex libs -->
-	<PackageReference Update="Dex.Types" Version="1.0.26" />
-	<PackageReference Update="Dex.Extensions" Version="1.0.30" />
-	<PackageReference Update="Dex.Neo4J" Version="1.1.31" />
-
-  </ItemGroup>
+    </ItemGroup>
 </Project>
