--- a/src/Dex.Entity/Dex.Entity.csproj
+++ b/src/Dex.Entity/Dex.Entity.csproj
@@ -24,7 +24,7 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+      <PackageReference Include="System.ComponentModel.Annotations" />
     </ItemGroup>
     <!--/Для NuGet-->
 </Project>
