--- a/src/Dex.Audit/Client/Dex.Audit.Client/Dex.Audit.Client.csproj
+++ b/src/Dex.Audit/Client/Dex.Audit.Client/Dex.Audit.Client.csproj
@@ -34,11 +34,11 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
         <PackageReference Include="Microsoft.Extensions.Options"/>
-        <PackageReference Include="Dex.MassTransit.Rabbit" Version="8.0.2" />
+        <PackageReference Include="Dex.MassTransit.Rabbit"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
+        <ProjectReference Include="..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj"/>
     </ItemGroup>
 
 </Project>
