--- a/src/Dex.Audit/Server/Dex.Audit.Server/Dex.Audit.Server.csproj
+++ b/src/Dex.Audit/Server/Dex.Audit.Server/Dex.Audit.Server.csproj
@@ -34,12 +34,12 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
         <PackageReference Include="Microsoft.Extensions.Options"/>
-        <PackageReference Include="Dex.MassTransit.Rabbit" Version="8.0.2" />
+        <PackageReference Include="Dex.MassTransit.Rabbit"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
-      <ProjectReference Include="..\Dex.Audit.Server.Abstractions\Dex.Audit.Server.Abstractions.csproj" />
+        <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj"/>
+        <ProjectReference Include="..\Dex.Audit.Server.Abstractions\Dex.Audit.Server.Abstractions.csproj"/>
     </ItemGroup>
 
 </Project>
