--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
@@ -8,22 +8,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Server.Implementations.Grpc\Dex.Audit.Server.Implementations.Grpc.csproj" />
-        <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
-        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Server.Implementations\Dex.Audit.Server.Implementations.csproj" />
-        <ProjectReference Include="..\..\Server\Dex.Audit.Server\Dex.Audit.Server.csproj" />
-        <ProjectReference Include="..\Dex.Audit.Sample.Shared\Dex.Audit.Sample.Shared.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Server.Implementations.Grpc\Dex.Audit.Server.Implementations.Grpc.csproj"/>
+        <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj"/>
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Server.Implementations\Dex.Audit.Server.Implementations.csproj"/>
+        <ProjectReference Include="..\..\Server\Dex.Audit.Server\Dex.Audit.Server.csproj"/>
+        <ProjectReference Include="..\Dex.Audit.Sample.Shared\Dex.Audit.Sample.Shared.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6"/>
-        <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
-        <PackageReference Include="StackExchange.Redis.Extensions.AspNetCore" Version="10.2.0" />
-        <PackageReference Include="StackExchange.Redis.Extensions.System.Text.Json" Version="10.2.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory"/>
+        <PackageReference Include="StackExchange.Redis"/>
+        <PackageReference Include="StackExchange.Redis.Extensions.AspNetCore"/>
+        <PackageReference Include="StackExchange.Redis.Extensions.System.Text.Json"/>
+        <PackageReference Include="Swashbuckle.AspNetCore"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI"/>
     </ItemGroup>
 
 </Project>
