--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>        
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-      <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="10.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc"/>
+        <PackageReference Include="StackExchange.Redis.Extensions.Core"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
+        <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj"/>
     </ItemGroup>
 
 </Project>
