--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.ClickHouse/Dex.Cap.OnceExecutor.ClickHouse.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.ClickHouse/Dex.Cap.OnceExecutor.ClickHouse.csproj
@@ -33,7 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Octonica.ClickHouseClient" Version="3.1.3" />
+        <PackageReference Include="Octonica.ClickHouseClient" />
     </ItemGroup>
 
 </Project>
