--- a/src/Dex.Cap/Tests/Dex.Cap.ClickHouse.Test/Dex.Cap.ClickHouse.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.ClickHouse.Test/Dex.Cap.ClickHouse.Test.csproj
@@ -9,7 +9,7 @@
         <PackageReference Include="NUnit"/>
         <PackageReference Include="NUnit3TestAdapter"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
-        <PackageReference Include="Octonica.ClickHouseClient" Version="3.1.3"/>
+        <PackageReference Include="Octonica.ClickHouseClient"/>
     </ItemGroup>
 
     <ItemGroup>
