--- a/src/Dex.Cap/Tests/Dex.Cap.Ef.Tests/Dex.Cap.Ef.Tests.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.Ef.Tests/Dex.Cap.Ef.Tests.csproj
@@ -30,7 +30,7 @@
         <ProjectReference Include="..\..\Dex.Cap.Common.Ef\Dex.Cap.Common.Ef.csproj"/>
         <ProjectReference Include="..\..\Dex.Cap.OnceExecutor.Ef\Dex.Cap.OnceExecutor.Ef.csproj"/>
         <ProjectReference Include="..\..\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj"/>
-        <ProjectReference Include="..\..\Dex.Cap.Outbox.OnceExecutor.MassTransit\Dex.Cap.Outbox.OnceExecutor.MassTransit.csproj" />
+        <ProjectReference Include="..\..\Dex.Cap.Outbox.OnceExecutor.MassTransit\Dex.Cap.Outbox.OnceExecutor.MassTransit.csproj"/>
         <ProjectReference Include="..\..\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj"/>
         <ProjectReference Include="..\Dex.Outbox.Command.Test\Dex.Outbox.Command.Test.csproj"/>
     </ItemGroup>
@@ -56,7 +56,7 @@
             <DependentUpon>Concrete3ExecutionStrategyRequest.cs</DependentUpon>
         </Compile>
         <Compile Update="OutboxTests\Handlers\TransactionalCreateUserCommandHandler.cs">
-          <DependentUpon>TestUserCreatorCommand.cs</DependentUpon>
+            <DependentUpon>TestUserCreatorCommand.cs</DependentUpon>
         </Compile>
     </ItemGroup>
 
@@ -69,6 +69,12 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <DependentUpon>appsettings.json</DependentUpon>
         </None>
+        <Content Update="appsettings.local.json">
+          <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+          <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+          <DependentUpon>appsettings.json</DependentUpon>
+        </Content>
     </ItemGroup>
 
 </Project>
