--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Publisher/Dex.MassTransit.Sample.Publisher.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Publisher/Dex.MassTransit.Sample.Publisher.csproj
@@ -7,16 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
-      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.8.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions"/>
+        <PackageReference Include="OpenTelemetry.Exporter.Console"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.MassTransit.Rabbit\Dex.MassTransit.Rabbit.csproj" />
-      <ProjectReference Include="..\..\Dex.MassTransit.SQS\Dex.MassTransit.SQS.csproj" />
-      <ProjectReference Include="..\Dex.MassTransit.Sample.Domain\Dex.MassTransit.Sample.Domain.csproj" />
+        <ProjectReference Include="..\..\Dex.MassTransit.Rabbit\Dex.MassTransit.Rabbit.csproj"/>
+        <ProjectReference Include="..\..\Dex.MassTransit.SQS\Dex.MassTransit.SQS.csproj"/>
+        <ProjectReference Include="..\Dex.MassTransit.Sample.Domain\Dex.MassTransit.Sample.Domain.csproj"/>
     </ItemGroup>
 
 </Project>
