--- a/src/Dex.Neo4J/Dex.Neo4J.csproj
+++ b/src/Dex.Neo4J/Dex.Neo4J.csproj
@@ -27,7 +27,7 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-        <PackageReference Include="Neo4jClient" Version="5.1.15" />
+        <PackageReference Include="Neo4jClient"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -37,11 +37,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
+        <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
+        <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj"/>
     </ItemGroup>
 
 </Project>
