--- a/src/Tests/Dex.CreditCard.Tests/Dex.CreditCard.Tests.csproj
+++ b/src/Tests/Dex.CreditCard.Tests/Dex.CreditCard.Tests.csproj
@@ -6,13 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="NUnit"/>
+        <PackageReference Include="NUnit3TestAdapter"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.CreditCardType.Resolver\Dex.CreditCardType.Resolver.csproj" />
+        <ProjectReference Include="..\..\Dex.CreditCardType.Resolver\Dex.CreditCardType.Resolver.csproj"/>
     </ItemGroup>
 
 </Project>
