--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -41,6 +41,8 @@
         <PackageReference Update="System.ComponentModel.Annotations" Version="5.0.0"/>
         <PackageReference Update="System.Threading.Channels" Version="8.0.0"/>
         <PackageReference Update="System.Runtime.Serialization.Primitives" Version="4.3.0"/>
+        <PackageReference Update="System.Data.SqlClient" Version="4.9.0"/>
+        <PackageReference Update="System.Threading.Tasks.Extensions" Version="4.5.4"/>
 
         <!--misc -->
         <PackageReference Update="Npgsql" Version="8.0.7"/>
@@ -60,6 +62,7 @@
         <PackageReference Update="StackExchange.Redis.Extensions.AspNetCore" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.System.Text.Json" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.Core" Version="11.0.0"/>
+        <PackageReference Update="Nullable" Version="1.3.1"/>
 
         <!--microsoft asp.net core -->
         <PackageReference Update="Microsoft.OpenApi" Version="2.3.1"/>
