--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -35,6 +35,9 @@
         <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
         <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="$(FrameworkVersion)"/>
         <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
+        <PackageReference Update="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+        <PackageReference Update="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
 
         <!--system -->
         <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1"/>
