--- a/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Tests/Dex.ResponseSigning.Tests.csproj
+++ b/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Tests/Dex.ResponseSigning.Tests.csproj
@@ -8,19 +8,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="8.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Options" />        
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />        
-        <PackageReference Include="Moq" Version="4.20.72" />        
-        <PackageReference Include="xunit" />        
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PackageReference Include="FluentAssertions"/>
+        <PackageReference Include="Microsoft.Extensions.Options"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Moq"/>
+        <PackageReference Include="xunit"/>
+        <PackageReference Include="xunit.runner.visualstudio">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
+        <ProjectReference Include="..\..\Dex.ResponseSigning\Dex.ResponseSigning.csproj"/>
     </ItemGroup>
 
 </Project>
