--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -18,6 +18,9 @@
         <PackageReference Update="NUnit.Analyzers" Version="4.10.0"/>
         <PackageReference Update="HttpContextMoq" Version="1.7.0"/>
         <PackageReference Update="Moq" Version="4.20.72"/>
+        <PackageReference Update="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1"/>
+        <PackageReference Update="FluentAssertions" Version="8.6.0"/>
+        <PackageReference Update="xunit.runner.visualstudio" Version="3.1.4"/>
 
         <!--microsoft extensions -->
         <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1"/>
@@ -35,9 +38,9 @@
         <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
         <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="$(FrameworkVersion)"/>
         <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
-        <PackageReference Update="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-        <PackageReference Update="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
+        <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0"/>
 
         <!--system -->
         <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1"/>
@@ -46,6 +49,7 @@
         <PackageReference Update="System.Runtime.Serialization.Primitives" Version="4.3.0"/>
         <PackageReference Update="System.Data.SqlClient" Version="4.9.0"/>
         <PackageReference Update="System.Threading.Tasks.Extensions" Version="4.5.4"/>
+        <PackageReference Update="System.Text.Json" Version="8.0.6" />
 
         <!--misc -->
         <PackageReference Update="Npgsql" Version="8.0.7"/>
@@ -66,6 +70,8 @@
         <PackageReference Update="StackExchange.Redis.Extensions.System.Text.Json" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.Core" Version="11.0.0"/>
         <PackageReference Update="Nullable" Version="1.3.1"/>
+        <PackageReference Update="Refit" Version="8.0.0"/>
+        <PackageReference Update="Refit.HttpClientFactory" Version="8.0.0"/>
 
         <!--microsoft asp.net core -->
         <PackageReference Update="Microsoft.OpenApi" Version="2.3.1"/>
