--- a/src/Dex.Buffer/Dex.Buffer.csproj
+++ b/src/Dex.Buffer/Dex.Buffer.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <PackageTags>dex; buffer</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>1.0.25</PackageVersion>
+        <PackageVersion>1.0.26</PackageVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
