--- a/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
+++ b/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
@@ -7,13 +7,21 @@
 
     <ItemGroup>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
-        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.8.1"/>
-        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1"/>
+        <PackageReference Include="OpenTelemetry.Exporter.Console"/>
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting"/>
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Dex.Cap.OnceExecutor.AspNetScheduler\Dex.Cap.OnceExecutor.AspNetScheduler.csproj" />
+        <ProjectReference Include="..\Dex.Cap.OnceExecutor.Ef\Dex.Cap.OnceExecutor.Ef.csproj" />
         <ProjectReference Include="..\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj"/>
         <ProjectReference Include="..\Dex.Cap.Outbox.QuartzHandler\Dex.Cap.Outbox.AspNetScheduler.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="appsettings.local.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
     </ItemGroup>
 
 </Project>
