--- a/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
+++ b/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <PackageTags>dex; bank card type resolver, luna check</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <InformationalVersion>1.0</InformationalVersion>
-        <PackageVersion>1.0.30</PackageVersion>
+        <PackageVersion>1.0.31</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
