--- a/src/Dex.Neo4J/Dex.Neo4J.csproj
+++ b/src/Dex.Neo4J/Dex.Neo4J.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <PackageTags>dex; buffer</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <InformationalVersion>1.0</InformationalVersion>
-        <PackageVersion>1.1.31</PackageVersion>
+        <PackageVersion>1.1.32</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -27,7 +27,7 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-        <PackageReference Include="Neo4jClient" Version="5.1.15" />
+        <PackageReference Include="Neo4jClient"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -37,11 +37,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
+        <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
+        <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj"/>
     </ItemGroup>
 
 </Project>
