--- a/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
+++ b/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
         <PackageTags>dex;specifications</PackageTags>
         <Nullable>enable</Nullable>
         <InformationalVersion>1.0</InformationalVersion>
-        <PackageVersion>1.1.30</PackageVersion>
+        <PackageVersion>1.1.31</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -26,15 +26,11 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-        <None Include="..\.editorconfig" Link=".editorconfig"/>
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0"/>
+        <PackageReference Include="System.Runtime.Serialization.Primitives"/>
     </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
